# ignorers

./: .copier-answers.yml  .tag.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  labeler.yml  release_drafter.yml
src/: cli.rs  error.rs  http.rs  main.rs
