[package]
name = "ignorers"
version = "0.1.4"
edition = "2021"
authors = [ "Tom Fleet <tomfleet2018@gmail.com>" ]
description = "Generate gitignores from the command line"
license = "Apache-2.0"
homepage = "https://github.com/FollowTheProcess/ignorers"
repository = "https://github.com/FollowTheProcess/ignorers"
readme = "README.md"
keywords = [ "gitignore", "cli" ]
categories = [ "command-line-utilities" ]

[[bin]]
name = "ig"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = [ "derive" ] }
colored = "2.1.0"
reqwest = { version = "0.12.9", features = [ "blocking" ] }
thiserror = "1.0.67"

[dev-dependencies]
mockito = "1.5.0"
